--- a/style/index.css
+++ b/style/index.css
@@ -59,6 +59,17 @@ ul {
   width: 48px;
   align-self: center;
 }
+.weather-form .data__pages {
+  display: flex;
+}
+.weather-form .data__page {
+  border: solid 1px white;
+  padding: 10px;
+  cursor: pointer;
+}
+.weather-form .data__page:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
 
 @keyframes rotation {
   0% {
