--- a/style/index.css
+++ b/style/index.css
@@ -72,7 +72,7 @@ ul {
 .widget {
   overflow-y: auto;
   overflow-x: hidden;
-  max-height: 400px;
+    max-height: 500px;
   min-height: 200px;
   border-bottom: solid 1px #5a6164;
 }
@@ -158,6 +158,20 @@ ul {
   flex-direction: column;
   color: #ffffff;
   position: relative;
+    padding-top: 20px;
+    padding-right: 10px;
+}
+
+.data ::-webkit-scrollbar {
+    width: 8px;
+}
+
+.data ::-webkit-scrollbar-track {
+    background-color: #5a6164;
+}
+
+.data ::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 8px #00A3FF;
 }
 @media (max-width: 1060px) {
   .data {
@@ -186,9 +200,16 @@ ul {
   padding: 10px;
   cursor: pointer;
   text-align: center;
+    transition-duration: 0.2s;
+}
+
+.data__page_active {
+    background-color: #00A3FF;
+    opacity: 0.8;
 }
 .data__page:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+    background-color: #5a6164;
+    opacity: 0.5;
 }
 
 body {
@@ -202,6 +223,7 @@ body {
 
 button {
   cursor: pointer;
+    transition-duration: 0.1s;
 }
 button:disabled {
   cursor: default;
@@ -211,7 +233,7 @@ main {
   max-width: 90%;
   min-width: 500px;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   align-items: center;
   gap: 50px;
   margin: 0 auto;
@@ -224,7 +246,7 @@ main {
 @media (max-width: 1060px) {
   main {
     gap: 20px;
-    grid-template-columns: repeat(1, 1fr);
+      grid-template-columns: 1fr;
   }
 }
 
