--- a/style/index.scss
+++ b/style/index.scss
@@ -15,6 +15,7 @@ body {
 
 button {
 	cursor: pointer;
+	transition-duration: 0.1s;
 
 	&:disabled {
 		cursor: default;
@@ -25,7 +26,7 @@ main {
 	max-width: 90%;
 	min-width: 500px;
 	display: grid;
-	grid-template-columns: repeat(2, 1fr);
+	grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 	align-items: center;
 	gap: 50px;
 	margin: 0 auto;
@@ -38,7 +39,7 @@ main {
 @media (max-width: 1060px) {
 	main {
 		gap: 20px;
-		grid-template-columns: repeat(1, 1fr);
+		grid-template-columns: 1fr;
 	}
 }
 
