added time to widget + final fixes + readme

--- a/style/_widget.scss
+++ b/style/_widget.scss
@@ -82,6 +82,11 @@
     background-size: 30px;
   }
 
+  &__time {
+    background-image: url("../img/time.svg");
+    background-size: 30px;
+  }
+
   &__active {
     padding: 15px;
   }
