--- a/style/index.css
+++ b/style/index.css
@@ -140,6 +140,11 @@ ul {
   background-image: url("../img/wind.svg");
   background-size: 30px;
 }
+
+.widget__time {
+    background-image: url("../img/time.svg");
+    background-size: 30px;
+}
 .widget__active {
   padding: 15px;
 }
@@ -161,15 +166,12 @@ ul {
     padding-top: 20px;
     padding-right: 10px;
 }
-
 .data ::-webkit-scrollbar {
     width: 8px;
 }
-
 .data ::-webkit-scrollbar-track {
     background-color: #5a6164;
 }
-
 .data ::-webkit-scrollbar-thumb {
     box-shadow: inset 0 0 8px #00A3FF;
 }
@@ -202,7 +204,6 @@ ul {
   text-align: center;
     transition-duration: 0.2s;
 }
-
 .data__page_active {
     background-color: #00A3FF;
     opacity: 0.8;
@@ -236,11 +237,11 @@ main {
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   align-items: center;
   gap: 50px;
-  margin: 0 auto;
   border: 2px solid #5a6164;
   border-radius: 20px;
   padding: 0 40px;
   background-color: rgba(0, 0, 0, 0.1);
+    margin: 100px auto 0;
 }
 
 @media (max-width: 1060px) {
