--- a/style/index.scss
+++ b/style/index.scss
@@ -29,11 +29,11 @@ main {
 	grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 	align-items: center;
 	gap: 50px;
-	margin: 0 auto;
 	border: 2px solid $color-gray;
 	border-radius: 20px;
 	padding: 0 40px;
 	background-color: rgba(0, 0, 0, 0.1);
+	margin: 100px auto 0;
 }
 
 @media (max-width: 1060px) {
